# DirectXShaderCompiler

./: .artifactignore  .gitignore  .gitmodules  .travis.yml  AIToolPolicy.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  COPYRIGHT  LICENSE.TXT  LLVMBuild.txt  README.md  ThirdPartyNotices.txt  appveyor.yml  appveyor_ubuntu.yml  azure-pipelines.yml  issue-7494.hlsl  output.txt  output2.txt  pr-roundrobin-design.md  pyproject.toml  tatus  test.py
include/dxc/: CMakeLists.txt  HlslIntrinsicOp.h  WinAdapter.h  WinEtwAdapter.h  config.h  config.h.cmake  dxcapi.h  dxcapi.internal.h  dxcdxrfallbackcompiler.h  dxcerrors.h  dxcisense.h  dxcpix.h  dxcreflect.h  dxctools.h
lib/: CMakeLists.txt  LLVMBuild.txt
lib/Analysis/: AliasAnalysis.cpp  AliasAnalysisCounter.cpp  AliasAnalysisEvaluator.cpp  AliasDebugger.cpp  AliasSetTracker.cpp  Analysis.cpp  AssumptionCache.cpp  BasicAliasAnalysis.cpp  BlockFrequencyInfo.cpp  BlockFrequencyInfoImpl.cpp  BranchProbabilityInfo.cpp  CFG.cpp  CFGPrinter.cpp  CFLAliasAnalysis.cpp  CGSCCPassManager.cpp  CMakeLists.txt  CaptureTracking.cpp  CodeMetrics.cpp  ConstantFolding.cpp  CostModel.cpp  Delinearization.cpp  DependenceAnalysis.cpp  DivergenceAnalysis.cpp  DomPrinter.cpp  DominanceFrontier.cpp  DxilConstantFolding.cpp  DxilSimplify.cpp  DxilValueCache.cpp  IVUsers.cpp  InstCount.cpp  InstructionSimplify.cpp  Interval.cpp  IntervalPartition.cpp  IteratedDominanceFrontier.cpp  LLVMBuild.txt  LazyCallGraph.cpp  LazyValueInfo.cpp  LibCallAliasAnalysis.cpp  LibCallSemantics.cpp  Lint.cpp  (+34 more)
lib/AsmParser/: CMakeLists.txt  LLLexer.cpp  LLLexer.h  LLParser.cpp  LLParser.h  LLToken.h  LLVMBuild.txt  Parser.cpp
lib/Bitcode/: CMakeLists.txt  LLVMBuild.txt
lib/CodeGen/: AggressiveAntiDepBreaker.cpp  AggressiveAntiDepBreaker.h  AllocationOrder.cpp  AllocationOrder.h  Analysis.cpp  AntiDepBreaker.h  AtomicExpandPass.cpp  BasicTargetTransformInfo.cpp  BranchFolding.cpp  BranchFolding.h  CMakeLists.txt  CalcSpillWeights.cpp  CallingConvLower.cpp  CodeGen.cpp  CodeGenPrepare.cpp  CoreCLRGC.cpp  CriticalAntiDepBreaker.cpp  CriticalAntiDepBreaker.h  DFAPacketizer.cpp  DeadMachineInstructionElim.cpp  DwarfEHPrepare.cpp  EarlyIfConversion.cpp  EdgeBundles.cpp  ErlangGC.cpp  ExecutionDepsFix.cpp  ExpandISelPseudos.cpp  ExpandPostRAPseudos.cpp  FaultMaps.cpp  GCMetadata.cpp  GCMetadataPrinter.cpp  GCRootLowering.cpp  GCStrategy.cpp  GlobalMerge.cpp  IfConversion.cpp  ImplicitNullChecks.cpp  InlineSpiller.cpp  InterferenceCache.cpp  InterferenceCache.h  InterleavedAccessPass.cpp  IntrinsicLowering.cpp  (+103 more)
lib/DXIL/: CMakeLists.txt  DxilCompType.cpp  DxilContainer.cpp  DxilCounters.cpp  DxilInterpolationMode.cpp  DxilMetadataHelper.cpp  DxilModule.cpp  DxilModuleHelper.cpp  DxilNodeProps.cpp  DxilOperations.cpp  DxilPDB.cpp  DxilResource.cpp  DxilResourceBase.cpp  DxilResourceBinding.cpp  DxilResourceProperties.cpp  DxilSemantic.cpp  DxilShaderFlags.cpp  DxilShaderModel.cpp  DxilSignature.cpp  DxilSignatureElement.cpp  DxilSubobject.cpp  DxilTypeSystem.cpp  DxilUtil.cpp  DxilUtilDbgInfoAndMisc.cpp  DxilWaveMatrix.cpp  LLVMBuild.txt
lib/DebugInfo/: CMakeLists.txt  LLVMBuild.txt
lib/DxcBindingTable/: DxcBindingTable.cpp
lib/DxcSupport/: CMakeLists.txt  FileIOHelper.cpp  Global.cpp  HLSLOptions.cpp  SharedLibAffix.inc  Unicode.cpp  WinAdapter.cpp  WinFunctions.cpp  WinIncludes.cpp  dxcapi.extval.cpp  dxcapi.use.cpp  dxcmem.cpp
lib/DxilCompression/: CMakeLists.txt  DxilCompression.cpp  miniz.c
lib/DxilContainer/: CMakeLists.txt  D3DReflectionDumper.cpp  D3DReflectionStrings.cpp  DxcContainerBuilder.cpp  DxilContainer.cpp  DxilContainerAssembler.cpp  DxilContainerReader.cpp  DxilPipelineStateValidation.cpp  DxilRDATBuilder.cpp  LLVMBuild.txt  RDATDumper.cpp  RDATDxilSubobjects.cpp
lib/DxilDia/: CMakeLists.txt  DxcPixBase.h  DxcPixCompilationInfo.cpp  DxcPixCompilationInfo.h  DxcPixDxilDebugInfo.cpp  DxcPixDxilDebugInfo.h  DxcPixDxilStorage.cpp  DxcPixDxilStorage.h  DxcPixEntrypoints.cpp  DxcPixLiveVariables.cpp  DxcPixLiveVariables.h  DxcPixLiveVariables_FragmentIterator.cpp  DxcPixLiveVariables_FragmentIterator.h  DxcPixTypes.cpp  DxcPixTypes.h  DxcPixVariables.cpp  DxilDia.cpp  DxilDiaDataSource.cpp  DxilDiaDataSource.h  DxilDiaEnumTables.cpp  DxilDiaEnumTables.h  DxilDiaSession.cpp  DxilDiaSession.h  DxilDiaSymbolManager.cpp  DxilDiaSymbolManager.h  DxilDiaTable.cpp  DxilDiaTable.h  DxilDiaTableInjectedSources.cpp  DxilDiaTableInjectedSources.h  DxilDiaTableLineNumbers.cpp  DxilDiaTableLineNumbers.h  DxilDiaTableSourceFiles.cpp  DxilDiaTableSourceFiles.h  DxilDiaTableSymbols.cpp  DxilDiaTableSymbols.h  LLVMBuild.txt  dxcdia.cpp
lib/DxilPIXPasses/: CMakeLists.txt  DxilAddPixelHitInstrumentation.cpp  DxilAnnotateWithVirtualRegister.cpp  DxilDbgValueToDbgDeclare.cpp  DxilDebugBreakInstrumentation.cpp  DxilDebugInstrumentation.cpp  DxilForceEarlyZ.cpp  DxilNonUniformResourceIndexInstrumentation.cpp  DxilOutputColorBecomesConstant.cpp  DxilPIXAddTidToAmplificationShaderPayload.cpp  DxilPIXDXRInvocationsLog.cpp  DxilPIXMeshShaderOutputInstrumentation.cpp  DxilPIXPasses.cpp  DxilPIXVirtualRegisters.cpp  DxilPIXVirtualRegisters.h  DxilPixEmitMetadata.cpp  DxilPixEmitResources.cpp  DxilPixReadOutputSig.cpp  DxilReduceMSAAToSingleSample.cpp  DxilRemoveDiscards.cpp  DxilShaderAccessTracking.cpp  PixPassHelpers.cpp  PixPassHelpers.h
lib/DxilPdbInfo/: DxilPdbInfoWriter.cpp  LLVMBuild.txt
lib/DxilRDATBuilder/: CMakeLists.txt  DxilRDATBuilder.cpp  LLVMBuild.txt
lib/DxilResourceBinding/: CMakeLists.txt  DxilResourceBinding.cpp  LLVMBuild.txt
lib/DxilRootSignature/: DxilRootSignature.cpp  DxilRootSignatureConvert.cpp  DxilRootSignatureHelper.h  DxilRootSignatureSerializer.cpp  DxilRootSignatureValidator.cpp
lib/DxilValidation/: CMakeLists.txt  DxilContainerValidation.cpp  DxilValidation.cpp  DxilValidationInc.inc  DxilValidationUtils.cpp  DxilValidationUtils.h
lib/DxrFallback/: CMakeLists.txt  DxrFallbackCompiler.cpp  FunctionBuilder.h  LLVMUtils.cpp  LiveValues.h  Reducibility.cpp  StateFunctionTransform.cpp  (+2 more)
projects/: CMakeLists.txt  LLVMBuild.txt
(+12993 files in other folders)
