# Copyright (C) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license. See COPYRIGHT in the project root for full license information.
add_subdirectory(Utils)
# add_subdirectory(Instrumentation) # HLSL Change
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
# add_subdirectory(Hello) # HLSL Change
# add_subdirectory(ObjCARC) # HLSL Change
